<resources>
    <string name="app_name">Feedback_Management_System</string>
    <string name="module_name">Module Name:</string>
    <string name="feedback_title">Feedback Title: </string>
    <string name="class_id">Class ID:</string>
    <string name="class_name">Class Name:</string>
    <string name="end_time">End Time:</string>
    <string name="status">Status:</string>
    <string name="module_id">Module ID:</string>
    <string name="list_feedback">LIST FEEDBACK</string>
    <string name="complete">Complete</string>
    <string name="traning_module_feedback">TRANING Module FEEDBACK</string>
    <string name="textview">TextView</string>
    <string name="a_general_comment">A. GENERAL COMMENT</string>
    <string name="topic_lession_evaluation">TOPIC/LESSION EVALUATION</string>
    <string name="b_detail_evalution">B. DETAIL EVALUTION</string>
    <string name="question">Question</string>
    <string name="strongly_disagree">Strongly Disagree</string>
    <string name="disagree">Disagree</string>
    <string name="agree">Agree</string>
    <string name="undecided">UnDecided</string>
    <string name="strong_agree">Strong Agree</string>
    <string name="submit">Submit</string>
    <string name="announcement">Announcement</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="complete_feedback">Please complete your feedback!</string>
    <string name="sure_to_submit_feedback">Are you sure to submit this Feeback?</string>
    <string name="submit_successful">Submit feedback successfully!</string>
    <string name="Class">Class</string>
    <string name="module">Module</string>
    <string name="feedback_statics_of">Feedback Statistics of Class </string>
    <string name="feedback_statistics_of_module">Feedback Statistics of module</string>
    <string name="show_overview">Show Overview</string>
    <string name="show_detail">Show Detail</string>
    <string name="choose_item">Please choose item!</string>
    <string name="answerViewModel">\"AnswerViewModel \"</string>
    <string name="empty_string"></string>
    <string name="feedback_statisics">Feedback Statistics</string>
    <string name="exit">Exit</string>
    <string name="log_in">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="remember_password">Remember Password</string>
    <string name="login">Login</string>

    <string name="usernamenotempty">Username must have at least 1 character!</string>
    <string name="passwordnotempty">Password must have at least 1 character!</string>
    <string name="blankusername">Username must have not a blank space!</string>
    <string name="wronglogin">Login failed, check your login details!</string>
    <string-array name="spinnerRole">
        <item>Admin</item>
        <item>Trainer</item>
        <item>Trainee</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="feedback_management_system">FEEDBACK MANAGEMENT SYSTEM</string>
    <string name="text_for_title">We are ready for the challenge \n Example@gmail.com</string>
    <string name="text_for_say_hello">HCMC, VN \n +84 123 456 789</string>
    <string name="jobs">JOBS</string>
    <string name="text_for_jobs">We are always looking for talent \n Example@gmail.com</string>
    <string name="nav_contact">Contact</string>
    <string name="are_your_sure">Are your sure?</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="nav_logout">Log out</string>
    <string name="admin_id">Admin ID: </string>
    <string name="start_date">Start Date: </string>
    <string name="end_date">End Date: </string>
    <string name="feedback_starttime">Feedback StartTime: </string>
    <string name="feedback_endtime">Feedback EndTime: </string>
    <string name="nav_module">Module</string>
    <string name="edit_module_list">Edit Module List</string>
    <string name="add_module_list">Add Module List</string>

</resources>